--- a/Elasticsearch-sink/pom.xml
+++ b/Elasticsearch-sink/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>io.pivotal.example</groupId>
 	<artifactId>Elasticsearch-sink</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.6-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>Elasticsearch-sink</name>
@@ -14,7 +14,9 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.7.RELEASE</version>
+		<!-- 
+		<version>1.5.7.RELEASE</version> -->
+		<version>2.0.0.M3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
@@ -34,6 +36,14 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-elasticsearch</artifactId>
 		</dependency>
+		 <!-- 
+		
+		 <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
+		</dependency>
+		 -->
+		
 		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -41,6 +51,7 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+
 
 	<dependencyManagement>
 		<dependencies>
@@ -54,6 +65,33 @@
 		</dependencies>
 	</dependencyManagement>
 
+    <repositories>
+        <repository>
+            <id>spring-release</id>
+            <url>http://repo.spring.io/libs-release</url>
+            <snapshots><enabled>false</enabled></snapshots>
+        </repository>
+        <repository>
+            <id>spring-milestone</id>
+            <url>http://repo.spring.io/libs-milestone</url>
+            <snapshots><enabled>true</enabled></snapshots>
+        </repository>
+        <repository>
+            <id>spring-snapshot</id>
+            <url>http://repo.spring.io/libs-snapshot</url>
+            <snapshots><enabled>true</enabled></snapshots>
+        </repository>
+    </repositories>
+	<pluginRepositories>
+	    <pluginRepository>
+	        <id>spring-snapshots</id>
+	        <url>http://repo.spring.io/snapshot</url>
+	    </pluginRepository>
+	    <pluginRepository>
+	        <id>spring-milestones</id>
+	        <url>http://repo.spring.io/milestone</url>
+	    </pluginRepository>
+	</pluginRepositories>
 	<build>
 		<plugins>
 			<plugin>
