basic persistence to ES using Rest client

--- a/Elasticsearch-sink/src/main/resources/application.properties
+++ b/Elasticsearch-sink/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.data.elasticsearch.cluster-nodes=localhost:9300
 spring.data.elasticsearch.cluster-name=docker-cluster
 spring.data.elasticsearch.shield.user=elastic:changeme
+
+elasticsearch.host=35.196.187.65
+elasticsearch.port=9200
+elasticsearch.clustername=mycluster
