--- a/Elasticsearch-sink/pom.xml
+++ b/Elasticsearch-sink/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>io.pivotal.example</groupId>
 	<artifactId>Elasticsearch-sink</artifactId>
-	<version>0.0.6-SNAPSHOT</version>
+	<version>0.1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>Elasticsearch-sink</name>
@@ -14,9 +14,11 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
+		
+		<version>1.5.7.RELEASE</version> 
 		<!-- 
-		<version>1.5.7.RELEASE</version> -->
 		<version>2.0.0.M3</version>
+		 -->
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
@@ -24,7 +26,11 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
+		
 		<spring-cloud.version>Dalston.SR3</spring-cloud.version>
+		<!-- 
+		<spring-cloud.version>Finchley.M2</spring-cloud.version>
+ -->
 	</properties>
 
 	<dependencies>
@@ -33,9 +39,16 @@
 			<artifactId>spring-cloud-stream-binder-kafka</artifactId>
 		</dependency>
 		<dependency>
+    			<groupId>org.elasticsearch.client</groupId>
+    			<artifactId>sniffer</artifactId>
+    			<version>5.5.2</version>
+		</dependency>
+		<!-- 
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-elasticsearch</artifactId>
 		</dependency>
+		 -->
 		 <!-- 
 		
 		 <dependency>
